--- a/html-the-web/html-and-the-web_div-salad/index.html
+++ b/html-the-web/html-and-the-web_div-salad/index.html
@@ -19,9 +19,9 @@ Let's fix this mess!
       <!--Which elements could be used to link to parts of the webpage,
 		which appear below?-->
       <nav id="nav">
-        <ul>About me</ul>
-        <ul>Contact</ul>
-        <ul>Skillset</ul>
+        <ul><a href="#about-me">About Me</a></ul>
+        <ul><a href="#contact">Contact</a></ul>
+        <ul><a href="#skills">Skillset</a></ul>
       </nav>
     </section>
     <!--Looks like the following part is the central content of our webpage.-->
