--- a/html-the-web/html-and-the-web_personal-website/index.html
+++ b/html-the-web/html-and-the-web_personal-website/index.html
@@ -18,7 +18,13 @@
     <main>
       <section></section>
         <img src="images/profile2.jpg" alt="My Profile" />
-        <p>I JUST LIKE TO KEEP THINGS SIMPLE</p>
+        <p>I JUST LIKE TO KEEP THINGS SIMPLE
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+            sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+            sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.
+        </p>
         <section id="about"></section>
         <h2>About me</h2>
         <p>
