--- a/css-basics/pseudo-park/css-basics_pseudo-park/index.html
+++ b/css-basics/pseudo-park/css-basics_pseudo-park/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -10,9 +11,9 @@
   </head>
   <body>
     <main class="park">
-      <div class="animal crocodile">🐊</div>
-      <div class="animal giraffe">🦒</div>
-      <div class="animal dino">🦖</div>
+      <div class="animal animal-crocodile">🐊</div>
+      <div class="animal animal-giraffe">🦒</div>
+      <div class="animal animal-dino">🦖</div>
     </main>
   </body>
 </html>
