--- a/css-basics/css-grid/css-grid_image-board/css-grid_image-board/index.html
+++ b/css-basics/css-grid/css-grid_image-board/css-grid_image-board/index.html
@@ -13,32 +13,32 @@
     <main class="image-board__container">
       <img
         class="image-board__image image-board__image--1"
-        src="https://source.unsplash.com/random/500x500?banana"
+        src="https://images.unsplash.com/photo-1531326240216-7b04ad593229?w=1400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fGJhbmFuYXxlbnwwfHwwfHx8MA%3D%3D"
         alt="a banana"
       />
       <img
         class="image-board__image image-board__image--2"
-        src="https://source.unsplash.com/random/500x500?apple+fruit"
+        src="https://images.unsplash.com/photo-1623815242959-fb20354f9b8d?w=1400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGFwcGxlJTIwZnJ1aXR8ZW58MHx8MHx8fDA%3D"
         alt="an apple"
       />
       <img
         class="image-board__image image-board__image--3"
-        src="https://source.unsplash.com/random/500x500?melon"
+        src="https://images.unsplash.com/photo-1571575173700-afb9492e6a50?w=1400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8bWVsb258ZW58MHx8MHx8fDA%3D"
         alt="a melon"
       />
       <img
         class="image-board__image image-board__image--4"
-        src="https://source.unsplash.com/random/500x500?peach+fruit"
+        src="https://images.unsplash.com/photo-1565769583321-29e69b493031?w=1400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cGVhY2h8ZW58MHx8MHx8fDA%3D"
         alt="a peach"
       />
       <img
         class="image-board__image image-board__image--5"
-        src="https://source.unsplash.com/random/500x500?tomato"
+        src="https://images.unsplash.com/photo-1504472685735-9bd4075b3779?w=1400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8dG9tYXRvfGVufDB8fDB8fHww"
         alt="a tomato"
       />
       <img
         class="image-board__image image-board__image--6"
-        src="https://source.unsplash.com/random/500x500?cauliflower"
+        src="https://images.unsplash.com/photo-1635843121650-ce041e3542cd?w=1400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGNhdWxpZmxvd2VyfGVufDB8fDB8fHww"
         alt="a cauliflower"
       />
     </main>
