Revert "chllg. not finished yet, got some questions"

--- a/js-basics/JS-conditions-and-booleans/js-conditions-and-booleans_truthy-and-falsy/index.html
+++ b/js-basics/JS-conditions-and-booleans/js-conditions-and-booleans_truthy-and-falsy/index.html
@@ -23,10 +23,11 @@
         <li>
           Check the radio buttons "truthy" or "falsy" for every expression
         </li>
-        <li>Open the dev tools of your browser, go to the console tab.</li>
         <li>
-          Check each of your answers in the console. For example:
-          <code> Boolean('hello world')</code>
+          Open the dev tools of your browser, go to the console tab.
+        </li>
+        <li>
+          Check each of your answers in the console. For example: <code> Boolean('hello world')</code>
         </li>
       </ol>
       <form>
@@ -143,6 +144,6 @@
         </ul>
       </form>
     </main>
-    <script src="./js/index.js" defer></script>
+  <script src="./js/index.js" defer></script>
   </body>
 </html>
